# Python_pipelines

./: CHANGES  CMakeLists.txt  Makefile  README.md  THANKS.rst  crash-20170412-121743-clairec-atlas_mapnode.pklz  crash-20170412-121955-clairec-atlas_mapnode.pklz  requirements.txt  setup.py  test_wf.py
CMake/: NiftyPipeConfig.cmake.in  NiftyPipeData.cmake
Testing/: CMakeLists.txt  test_perform_bias_field_correction.py  test_perform_dti_processing.py  test_perform_gif_propagation.py  test_perform_noddi_processing.py  test_perform_regional_average.py  test_perform_restingstate_preprocessing.py  utility.py
doc/: Makefile  README.txt  changes.rst  conf.py  documentation.rst  index.rst  links_names.txt  make.bat  quickstart.rst
doc/_templates/: indexsidebar.html  layout.html  navbar.html  sidebar_versions.html
doc/devel/: architecture.rst  cmd_interface_devel.rst  filename_generation.rst  index.rst  interface_specs.rst  matlab_interface_devel.rst  provenance.rst  python_interface_devel.rst  software_using_nipype.rst
doc/sphinxext/: README.txt
doc/users/: caching_tutorial.rst  config_file.rst  debug.rst  function_interface.rst  grabbing_and_sinking.rst  index.rst  install.rst  interface_tutorial.rst  joinnode_and_itersource.rst  mapnode_and_iterables.rst  model_specification.rst  nipypecmd.rst  pipeline_tutorial.rst  plugins.rst  saving_workflows.rst  select_files.rst  spmmcr.rst  tutorial_101.rst  tutorial_102.rst  tutorial_103.rst  vagrant.rst
examples/: add_images_to_template.py  download_xnat_data.py  download_xnat_data_and_upload_mask.py  gather_profile_graphs.py  test_RegF3D.py  upload_xnat_data.py
niftypipe/: __init__.py
niftypipe.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
niftypipe/testing/: __init__.py
studies/: CMakeLists.txt
studies/drc/: CMakeLists.txt  (+2 more)
tools/: README  build_interface_docs.py  build_modref_templates.py  checkspecs.py  ex2rst  github.py  make_pipelines.py  niftypipe_nightly.py  report_coverage.py  run_examples.py  setup.py
(+138 files in other folders)
